# trade-signal-pipeline

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
ingester/: Cargo.toml
ingester/src/: main.rs
normalizer/: Cargo.toml
normalizer/src/: main.rs
sma-cross/: Cargo.toml
sma-cross/src/: config.rs  main.rs  sma.rs
